--- a/css/signup.css
+++ b/css/signup.css
@@ -1,7 +1,99 @@
-      /* signup */
-           /* responsive */
-           @media (max-width: 992px) {
-            .page_efinition {
-                font-size: 20px!important;
-            }
-            }
+
+
+.form_control_inputs_row {
+    display: flex;
+    justify-content: center;
+    }
+    
+    .form_control_inputs {
+    background-color: #3E1AA1;
+    margin-top: 200px;
+    margin-bottom: 500px;
+    border-radius: 20px;
+    padding: 60px;
+    max-width: 70%;
+    
+    text-align: right;
+    .form-control{
+    text-align: right;
+    height: 50px; 
+    }
+    }
+    
+    .head_singup,.h_1 {
+    margin-bottom: 100px;
+    font-weight: bold;
+    font-size: 40px;
+    }
+    
+    .h_2 {
+    font-size: 30px;
+    font-weight: 100;
+    margin-top: 40px;
+    }
+    
+    
+    
+    /* responsive return_button */
+    
+    @media (max-width: 992px) {
+    .form_control_inputs {
+    padding: 45px;
+    .form-control{
+    height: 30px; 
+    }
+    }
+    .head_singup,.h_1 {
+    font-size: 30px;
+    }
+    
+    
+    .h_2 {
+    font-size: 20px;
+    font-weight: 100;
+    margin-top: 40px;
+    }
+    
+    .btn_singup {
+    padding: 5px;
+    font-size: 20px!important;
+    }
+    
+    }
+    
+    
+    
+    @media (max-width: 768px) {
+    .form_control_inputs {
+    margin-top: 200px;
+    border-radius: 20px;
+    padding: 20px;
+    max-width: 70%;
+    
+    text-align: right;
+    .form-control{
+    text-align: right;
+    height: 20px; 
+    }
+    }
+    
+    
+    .head_singup,.h_1 {
+    margin-bottom: 25px;
+    font-weight: bold;
+    font-size: 20px;
+    }
+    
+    .h_2 {
+    font-size: 15px;
+    font-weight: 100;
+    margin-top: 20px;
+    }
+    
+    .btn_singup {
+    padding: 5px;
+    font-size: 10px!important;
+    }
+    
+    }
+    
