--- a/css/index/3below_background_boxes.css
+++ b/css/index/3below_background_boxes.css
@@ -159,8 +159,19 @@ font-weight: bold;
 }
 
 .card_text {
-font-size: 10px;
+font-size: 12px;
 text-align: justify;
 direction: rtl;
 }
 } 
+
+
+
+
+
+
+/* icons */
+.icons {
+width: 90%;
+}
+
