--- a/css/index/4paragraph.css
+++ b/css/index/4paragraph.css
@@ -8,6 +8,8 @@ width: 90%;
 .paragraph_below_boxes_row {
 text-align: justify;
 direction: rtl;
+word-spacing: 7px;
+letter-spacing: 0px;
 }
 
 .header_paragraph {
