--- a/css/signup.css
+++ b/css/signup.css
@@ -1,99 +1,120 @@
 
 
 .form_control_inputs_row {
-    display: flex;
-    justify-content: center;
-    }
-    
-    .form_control_inputs {
-    background-color: #3E1AA1;
-    margin-top: 200px;
-    margin-bottom: 500px;
-    border-radius: 20px;
-    padding: 60px;
-    max-width: 70%;
-    
-    text-align: right;
-    .form-control{
-    text-align: right;
-    height: 50px; 
-    }
-    }
-    
-    .head_singup,.h_1 {
-    margin-bottom: 100px;
-    font-weight: bold;
-    font-size: 40px;
-    }
-    
-    .h_2 {
-    font-size: 30px;
-    font-weight: 100;
-    margin-top: 40px;
-    }
-    
-    
-    
-    /* responsive return_button */
-    
-    @media (max-width: 992px) {
-    .form_control_inputs {
-    padding: 45px;
-    .form-control{
-    height: 30px; 
-    }
-    }
-    .head_singup,.h_1 {
-    font-size: 30px;
-    }
-    
-    
-    .h_2 {
-    font-size: 20px;
-    font-weight: 100;
-    margin-top: 40px;
-    }
-    
-    .btn_singup {
-    padding: 5px;
-    font-size: 20px!important;
-    }
-    
-    }
-    
-    
-    
-    @media (max-width: 768px) {
-    .form_control_inputs {
-    margin-top: 200px;
-    border-radius: 20px;
-    padding: 20px;
-    max-width: 70%;
-    
-    text-align: right;
-    .form-control{
-    text-align: right;
-    height: 20px; 
-    }
-    }
-    
-    
-    .head_singup,.h_1 {
-    margin-bottom: 25px;
-    font-weight: bold;
-    font-size: 20px;
-    }
-    
-    .h_2 {
-    font-size: 15px;
-    font-weight: 100;
-    margin-top: 20px;
-    }
-    
-    .btn_singup {
-    padding: 5px;
-    font-size: 10px!important;
-    }
-    
-    }
-    
+display: flex;
+justify-content: center;
+}
+
+.form_control_inputs {
+background-color: #3E1AA1;
+margin-top: 100px;
+margin-bottom: 100px;
+border-radius: 20px;
+padding: 10px;
+max-width: 90%;
+
+text-align: right;
+.form-control{
+text-align: right;
+height: 25px; 
+}
+}
+
+.head_singup,.h_1 {
+margin-bottom: 20px;
+font-weight: bold;
+font-size: 20px;
+}
+
+.h_2 {
+font-size: 15px;
+font-weight: 100;
+margin-top: 10px;
+}
+
+
+.btn_form {
+border: 1px solid #e37886;
+padding: 5px;
+margin-top: 10px;
+color: white;
+border-radius: 60px;
+font-size: 12px;
+}
+
+
+.btn_form:hover {
+background-color: #e37886;
+}
+
+
+
+
+
+/* responsive form */
+@media (min-width: 350px) {
+.form_control_inputs {
+max-width: 70%;
+}
+}
+
+
+@media (min-width: 500px) {
+.form_control_inputs {
+padding: 30px;
+max-width: 70%;
+
+.form-control{
+height: 30px; 
+}
+}
+
+.head_singup,.h_1 {
+font-size: 25px;
+}
+
+.h_2 {
+font-size: 18px;
+}
+
+.btn_form {
+padding: 5px;
+margin-top: 30px;
+font-size: 14px;
+}
+
+}
+
+
+@media (min-width: 768px) {
+.form_control_inputs {
+padding: 20px;
+max-width: 50%;
+
+.form-control{
+height: 35px; 
+}
+}
+
+.head_singup,.h_1 {
+font-size: 30px;
+}
+
+.h_2 {
+font-size: 20px;
+}
+
+.btn_form {
+padding: 5px;
+margin-top: 30px;
+font-size: 18px;
+}
+
+}
+
+@media (min-width: 992px) {
+.form_control_inputs {
+padding: 30px;
+min-width: 50%;
+}
+}
