--- a/css/index/5shape&boxes.css
+++ b/css/index/5shape&boxes.css
@@ -32,17 +32,17 @@ width: 100%;
 height: 900px;
 }
 
+.card-title {
+font-size: 9px;
+font-weight: bold;
 
+}
 
 .font_size {
 font-size: 8px;
 }
 
-.card-title {
-font-size: 13px;
-font-weight: bold;
 
-}
 
 
 
@@ -98,7 +98,7 @@ top: -570px;
 }
 
 .card-title {
-font-size: 17px;
+font-size: 13px;
 font-weight: bold;
 }
 
@@ -165,15 +165,6 @@ position: relative;
 top: -660px;
 }
 
-.card-title {
-font-size: 20px;
-font-weight: bold;
-}
-
-.font_size {
-font-size: 12px;
-}
-
 
 
 .body_boxes_btn {
@@ -237,7 +228,7 @@ top: -660px;
 }
 
 .card-title {
-font-size: 20px;
+font-size: 15px;
 font-weight: bold;
 }
 
@@ -311,7 +302,7 @@ top: -660px;
 }
 
 .card-title {
-font-size: 23px;
+font-size: 17px;
 font-weight: bold;
 }
 
@@ -390,7 +381,7 @@ top: -900px;
 }
 
 .card-title {
-font-size: 28px;
+font-size: 20px;
 font-weight: bold;
 }
 
@@ -456,20 +447,20 @@ height: 1200px;
 }
 
 .boxes_background_body {
-background-color: #D36A78!important;
-width: 25%;
+background-color: #D36A78;
+width: 30%;
 box-shadow:-2px -1px 3px rgb(43, 43, 43, 0.5);
 position: relative;
 top: -570px;
 }
 
 .card-title {
-font-size: 15px;
+font-size: 14px;
 font-weight: bold;
 }
 
 .font_size {
-font-size: 10px;
+font-size: 11px;
 }
 
 
