--- a/css/signup.css
+++ b/css/signup.css
@@ -114,7 +114,8 @@ font-size: 18px;
 
 @media (min-width: 992px) {
 .form_control_inputs {
-padding: 30px;
-min-width: 50%;
+padding: 50px;
+width: 400px;
+
 }
 }
