--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -37,3 +37,23 @@ width: 100px;
     border-radius: 5px;
     border: 1px solid white;
    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+   /* moblle */
+
+   .dropdown_menu_mobile {
+    color: white;
+    background-color: rgba(0, 0, 0, 0);
+    border: 0;
+   }
