--- a/css/index/3below_background_boxes.css
+++ b/css/index/3below_background_boxes.css
@@ -167,7 +167,35 @@ font-size: 14px;
 text-align: justify;
 direction: rtl;
 }
+
+
 } 
+
+
+
+
+@media (max-width: 991px) {
+    .reveal {
+    position: relative; 
+    transform: translateY(100px);
+    opacity: 0;
+    transition: all 1s ease;
+ }
+ 
+ 
+ 
+ .reveal.active {
+     transform: translateY(0px);
+     opacity: 1;
+ }
+}
+
+
+
+
+
+
+
 
 
 
