--- a/css/index/6paragraph_below_shape&boxes.css
+++ b/css/index/6paragraph_below_shape&boxes.css
@@ -3,7 +3,7 @@
 
 
 .below_body_title {
-color: black;
+color: #3e1aa1;
 font-size: 20px;
 font-weight: bold;
 text-shadow: -1px -1px 5px rgba(0, 0, 0, 0.187);
