--- a/css/index/7footter.css
+++ b/css/index/7footter.css
@@ -9,6 +9,7 @@ margin-bottom: 20px;
 
 .title_footer {
 font-size: 18px;
+color: #3E1AA1!important;
 }
 
 
@@ -17,6 +18,6 @@ background-color: #3E1AA1;
 }
 
 
-@media (max-width: 768px) {
-
+.copy_right {
+color: #3E1AA1!important;
 }
